<resources>
    <string name="app_name">Daily Mood Tracker</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="label_mood">Mood</string>
    <string name="label_graph">Graph</string>
    <string name="slider_mood">Your Mood</string>
    <string name="mood_depressed">Very Depressed</string>
    <string name="mood_manic">Extremely Manic</string>

    <!-- here are the names for the charts -->
    <string name="chart_last_2_weeks">Last 2 Weeks</string>
    <string name="chart_last_1_month">Last Month</string>
    <string name="chart_last_3_months">Last 3 Months</string>
    <string name="chart_last_6_months">Last 6 Months</string>
    <string name="chart_last_1_year">Last Year</string>

    <!-- other strings and accessibility -->
    <string name="mood_locked">Mood slider is locked</string>
    <string name="spinner_label">Display results from</string>
    <string name="sign_in_prompt">Welcome. Please sign in to access your data</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="label_depressed">depressed</string>
    <string name="label_neutral">neutral</string>
    <string name="label_manic">manic</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name_activity_login">LoginActivity</string>

    <!-- greeting strings -->
    <string name="not_logged_in">Not Logged in</string>
    <string name="greeting">Hello, %1$s!</string>
    <string name="please_sign_in">Please sign in to access your data.</string>
    <string name="NO_QUOTE_FOUND">No quote found.</string>
    <string name="network_error">Network Error</string>
    <string name="hello_user_placeholder">Hello User</string>
</resources>
